[package]
name = "fav"
version = "0.0.1"
edition = "2021"
description = "Favorite tools for Command line Interface"
authors = ["masinc <masinc000@gmail.com>"]
repository = "https://github.com/masinc/fav"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", ]
keywords = ["CLI", "favorites"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
async-trait = "0.1"
normpath = "0.3"
thiserror = "1"
dirs = "4"
itertools = "0.10"

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"]

[dependencies.tokio]
version = "1"
features = ["full"]
